force-app/main/default/objects/DER_Agreement__c/DER_Agreement__c.object-meta.xml
<CustomObject>
    <label>DER Agreement</label>
    <nameField>
        <displayFormat>Agmt-{0000000}</displayFormat>
        <label>Agreement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DER Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>