force-app/main/default/objects/DER_Agreement__c/fields/Contract_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active_Date__c</fullName>
    <description>The date the offer is active i.e. when Post Installation forms are returned and validated</description>
    <label>Contract Active Date</label>
    <type>Date</type>
</CustomField>