force-app/main/default/objects/DER_Agreement__c/fields/Contract_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Completed_Date__c</fullName>
    <label>Contract Completed Date</label>
    <type>Date</type>
</CustomField>