force-app/main/default/objects/DER_Agreement__c/fields/DER_Application__c.field-meta.xml
<CustomField>
    <fullName>DER_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DER Application</label>
    <referenceTo>DER_Application__c</referenceTo>
    <relationshipLabel>DER Agreements</relationshipLabel>
    <relationshipName>DER_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>