force-app/main/default/objects/DER_Agreement__c/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NMI</label>
    <referenceTo>Connection_Point__c</referenceTo>
    <relationshipLabel>DER Agreements</relationshipLabel>
    <relationshipName>DER_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>