force-app/main/default/objects/DER_Agreement__c/fields/Offer_Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Offer_Accepted_By__c</fullName>
    <label>Offer Accepted By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>