force-app/main/default/objects/DER_Agreement__c/fields/Offer_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Declined_Date__c</fullName>
    <label>Offer Declined Date</label>
    <type>Date</type>
</CustomField>