force-app/main/default/objects/DER_Agreement__c/fields/Offer_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiration_Date__c</fullName>
    <description>Shows the Offer Expiry Date, based on the Date Offer Made, and the Offer Type</description>
    <formula>if(AND(Not(ISNULL(Offer_Made_Date__c)), OR( TEXT( Offer_Type__c ) = &apos;Negotiated 0-5MW&apos;,TEXT( Offer_Type__c ) = &apos;Negotiated &gt;5MW NEA&apos;,TEXT( Offer_Type__c ) = &apos;Negotiated &gt;5MW NEA&amp;NMA&apos;) ), CASE(
MOD(Offer_Made_Date__c - DATE(1900, 1, 7), 7),
0, (Offer_Made_Date__c) + 20 + FLOOR((20-1)/5)*2,
1, (Offer_Made_Date__c) + 20 + FLOOR((20)/5)*2,
2, (Offer_Made_Date__c) + 20 + FLOOR((20+1)/5)*2,
3, (Offer_Made_Date__c) + 20 + FLOOR((20+2)/5)*2,
4, (Offer_Made_Date__c) + 20 + FLOOR((20+3)/5)*2,
5, (Offer_Made_Date__c) + 20 + CEILING((20)/5)*2,
6, (Offer_Made_Date__c) - IF(20&gt;0,1,0) + 20 + CEILING((20)/5)*2,
null) , IF( AND(Not(ISNULL(Offer_Made_Date__c)),TEXT( Offer_Type__c ) = &apos;Basic Micro EG MSO&apos;) , CASE(
MOD(Offer_Made_Date__c - DATE(1900, 1, 7), 7),
0, (Offer_Made_Date__c) + 45 + FLOOR((45-1)/5)*2,
1, (Offer_Made_Date__c) + 45 + FLOOR((45)/5)*2,
2, (Offer_Made_Date__c) + 45 + FLOOR((45+1)/5)*2,
3, (Offer_Made_Date__c) + 45 + FLOOR((45+2)/5)*2,
4, (Offer_Made_Date__c) + 45 + FLOOR((45+3)/5)*2,
5, (Offer_Made_Date__c) + 45 + CEILING((45)/5)*2,
6, (Offer_Made_Date__c) - IF(45&gt;0,1,0) + 45 + CEILING((45)/5)*2,
null), null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Expiration Date</label>
    <type>Date</type>
</CustomField>