force-app/main/default/objects/DER_Agreement__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Micro EG MSO</fullName>
            </value>
            <value>
                <fullName>Negotiated 0-5MW</fullName>
            </value>
            <value>
                <fullName>Negotiated &gt;5MW NEA&amp;NMA</fullName>
            </value>
            <value>
                <fullName>Negotiated &gt;5MW NEA</fullName>
            </value>
            <value>
                <fullName>Flexible &lt;30kW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>