force-app/main/default/objects/DER_Agreement__c/fields/Offer_Version__c.field-meta.xml
<CustomField>
    <fullName>Offer_Version__c</fullName>
    <label>Offer Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>