force-app/main/default/objects/DER_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offer Made</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Declined</fullName>
            </value>
            <value>
                <fullName>Offer Expired</fullName>
            </value>
            <value>
                <fullName>Contract Active</fullName>
            </value>
            <value>
                <fullName>Contract Completed</fullName>
            </value>
            <value>
                <fullName>Contract Unauthorised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>