force-app/main/default/objects/DER_Agreement__c/validationRules/Offer_Accepted_on_or_after_Offer_Made.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_Accepted_on_or_after_Offer_Made</fullName>
    <active>true</active>
    <description>Offer Accepted Date must be equal to or after the Offer Made Date</description>
    <errorConditionFormula>Offer_Accepted_Date__c &lt; Offer_Made_Date__c</errorConditionFormula>
    <errorDisplayField>Offer_Accepted_Date__c</errorDisplayField>
    <errorMessage>Offer Accepted Date must be equal to or after the Offer Made Date. Please update the relevant Date field.</errorMessage>
</ValidationRule>